[fix] Tablet  widget preview overflow.

--- a/_sass/pages/widget.scss
+++ b/_sass/pages/widget.scss
@@ -141,6 +141,12 @@
     text-align: left;
     float: right;
   }
+
+  @media (max-width: 1199px){
+    padding-right: 0;
+    padding-left: 0;
+    overflow: hidden;
+  }
 }
 
 .widget__color_scheme_control{
